# localizer-rs

./: .gitignore  CMakeLists.txt  update_headers.sh
localizer-rs/: Cargo.toml  cbindgen.toml
localizer-rs/src/: executable_range.rs  handlers.rs  helpers.rs  lib.rs
src/: localizer.h  localizer.x
