[package]
name = "localizer-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
panic = 'abort'
lto = true

[dependencies]
anyhow = "1.0"
uuid = { version = "1.1", features = ["v4"] }
mach_o_sys = "0.1"
lazy_static = "1.4"
log = { version = "0.4", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }
oslog = "0.2.0"
